[project]
name = "self-healing-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langchain-huggingface",
    "sentence-transformers",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
